me-first-commit

--- a/icantdoitanymore/index.html
+++ b/icantdoitanymore/index.html
@@ -14,6 +14,8 @@
             <li><a class="blue">Cheburashka</a></li>
             <li><a href="">Cheburashka landing banner</a></li>
             <li><a href="">Cheburashka</a></li>
+            
+
         </ul>
 
     </nav>
@@ -22,7 +24,7 @@
     <div class="banner"> 
         <h1>Cheburashka's landing banner</h1>
         <img id="chebu" src="./resources/images/hero.png" alt="Cute Cheburashka's face" />
-        <p class="blue">Cause everything better with Cheburashka's face in it!</p>
+        <p class="blue">Cause everything better with Cheburashka's face in it.</p>
         <button>Subscribe to me or I'm calling Gena</button>
     </div>
 
